fix: overflow app

--- a/src/main.css
+++ b/src/main.css
@@ -17,12 +17,13 @@ body {
 }
 
 #app {
-  max-width: 1280px;
   width: 100%;
+  max-width: 1280px;
   min-height: 100%;
   display: flex;
   flex-direction: column;
   font-family: 'Karla', sans-serif;
+  overflow: hidden;
 }
 
 :root {
